--- a/personal-website-old-main/personal-website-old-main/new/home.html
+++ b/personal-website-old-main/personal-website-old-main/new/home.html
@@ -27,7 +27,7 @@
         .banner {
             position: relative;
             height: 90vh;
-            background: url('/new/assets/images/gabriel.jpg') no-repeat center center / cover;
+            background: url('/personal-website-old-main/personal-website-old-main/new/assets/images/gabriel.jpg') no-repeat center center / cover;
             display: flex;
             align-items: center;
             justify-content: flex-start;
@@ -184,22 +184,22 @@
         <h2>Industry Leaders I've Worked Alongside:</h2>
         <div class="company-grid">
             <div class="company-card">
-                <img src="/new/assets/images/IKEA.png" alt="IKEA Logo" class="company-logo">
+                <img src="/personal-website-old-main/personal-website-old-main/new/assets/images/IKEA.png" alt="IKEA Logo" class="company-logo">
             </div>
             <div class="company-card">
-                <img src="/new/assets/images//samsung.png" alt="Samsung Logo" class="company-logo">
+                <img src="/personal-website-old-main/personal-website-old-main/new/assets/images/samsung.png" alt="Samsung Logo" class="company-logo">
             </div>
             <div class="company-card">
-                <img src="/new/assets/images//SPES.png" alt="Stanley Park Ecology Society Logo" class="company-logo">
+                <img src="/personal-website-old-main/personal-website-old-main/new/assets/images/SPES.png" alt="Stanley Park Ecology Society Logo" class="company-logo">
             </div>
             <div class="company-card">
-                <img src="/new/assets/images//WESN.png" alt="West End Seniors’ Network Logo" class="company-logo">
+                <img src="/personal-website-old-main/personal-website-old-main/new/assets/images/WESN.png" alt="West End Seniors’ Network Logo" class="company-logo">
             </div>
             <div class="company-card">
-                <img src="/new/assets/images//Sustainable-WWW.svg" alt="Sustainable WWW Logo" class="company-logo">
+                <img src="/personal-website-old-main/personal-website-old-main/new/assets/images/Sustainable-WWW.svg" alt="Sustainable WWW Logo" class="company-logo">
             </div>
             <div class="company-card">
-                <img src="/new/assets/images//Refoorest.png" alt="Refoorest Logo" class="company-logo">
+                <img src="/personal-website-old-main/personal-website-old-main/new/assets/images/Refoorest.png" alt="Refoorest Logo" class="company-logo">
             </div>
         </div>
     </div>
